<resources>
    <string name="app_name">Drive With Me</string>

    <string name="title_activity_refuel">Tanken</string>
    <string name="title_activity_drive">Fahren</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="get_in">Einsteigen</string>
    <string name="get_out">Aussteigen</string>
    <string name="drive">Fahren</string>
    <string name="refuel">Tanken</string>
    <string name="passengers">Mitfahrer</string>
    <string name="share">Teilen</string>
    <string name="send">Senden</string>
    <string name="mileage">Kilometerstand:</string>

    <string name="preferences_key">de.dikodam.drivewithme.PREFERENCES_KEY</string>
    <string name="mileage_preference">de.dikodam.drivewithme.MILEAGE_PREFERENCE</string>
    <string name="mileageUnit">km</string>
    <string name="title_activity_passengers">PassengersActivity</string>
</resources>
