<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drive"
            android:icon="@drawable/ic_airport_shuttle_black"
            android:onClick="startActivityFromDrawer"
            android:title="@string/drive" />
        <item
            android:id="@+id/nav_refuel"
            android:icon="@drawable/ic_gas_station"
            android:onClick="startActivityFromDrawer"
            android:title="@string/refuel" />
        <item
            android:id="@+id/nav_passengers"
            android:icon="@drawable/ic_group"
            android:onClick="startActivityFromDrawer"
            android:title="@string/passengers" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
